--- a/explorerquest/src/main/resources/application.properties
+++ b/explorerquest/src/main/resources/application.properties
@@ -1,5 +1,23 @@
+# Configurazioni generiche
+spring.application.name=ExplorerQuest
+server.port=8080
+
+# Importazione del file env.properties
 spring.config.import=file:src/env.properties
-spring.datasource.url=${db.url}
-spring.datasource.username=${db.username}
-spring.datasource.password=${db.password}
+
+# Database (estratto dal file env.properties)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate configurazione
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Geoapify API key (estratto dal file env.properties)
+geoapify.api.key=${GEOAPIFY_API_KEY}
+
+# JWT Secret (estratto dal file env.properties)
+jwt.secret=${jwt.secret}
+jwt.expiration.ms=${JWT_EXPIRATION_MS}
