--- a/explorerquest/src/main/resources/application.properties
+++ b/explorerquest/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=8080
 # Importazione del file env.properties
 spring.config.import=file:src/env.properties
 
-# Database (estratto dal file env.properties)
+# Database
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -15,9 +15,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Geoapify API key (estratto dal file env.properties)
+# Geoapify API key
 geoapify.api.key=${GEOAPIFY_API_KEY}
 
-# JWT Secret (estratto dal file env.properties)
+# JWT Secret
 jwt.secret=${jwt.secret}
 jwt.expiration.ms=${JWT_EXPIRATION_MS}
